cmake_minimum_required(VERSION 3.12)

project(Lua53)

add_library(lapi OBJECT lapi.c lprefix.h lua.h luaconf.h lapi.h llimits.h lstate.h
 lobject.h ltm.h lzio.h lmem.h ldebug.h ldo.h lfunc.h lgc.h lstring.h 
 ltable.h lundump.h lvm.h)
add_library(lauxlib OBJECT lauxlib.c lprefix.h lua.h luaconf.h lauxlib.h)
add_library(lbaselib OBJECT lbaselib.c lprefix.h lua.h luaconf.h lauxlib.h lualib.h)
add_library(lbitlib OBJECT lbitlib.c lprefix.h lua.h luaconf.h lauxlib.h lualib.h)
add_library(lcode OBJECT lcode.c lprefix.h lua.h luaconf.h lcode.h llex.h lobject.h llimits.h lzio.h lmem.h lopcodes.h lparser.h ldebug.h lstate.h ltm.h ldo.h lgc.h lstring.h ltable.h lvm.h)
add_library(lcorolib OBJECT lcorolib.c lprefix.h lua.h luaconf.h lauxlib.h lualib.h)
add_library(lctype OBJECT lctype.c lprefix.h lctype.h lua.h luaconf.h llimits.h)
add_library(ldblib OBJECT ldblib.c lprefix.h lua.h luaconf.h lauxlib.h lualib.h)
add_library(ldebug OBJECT ldebug.c lprefix.h lua.h luaconf.h lapi.h llimits.h lstate.h lobject.h ltm.h lzio.h lmem.h lcode.h llex.h lopcodes.h lparser.h ldebug.h ldo.h lfunc.h lstring.h lgc.h ltable.h lvm.h)
add_library(ldo OBJECT ldo.c lprefix.h lua.h luaconf.h lapi.h llimits.h lstate.h
 lobject.h ltm.h lzio.h lmem.h ldebug.h ldo.h lfunc.h lgc.h lopcodes.h lparser.h lstring.h ltable.h lundump.h lvm.h)
add_library(ldump OBJECT ldump.c lprefix.h lua.h luaconf.h lobject.h llimits.h lstate.h ltm.h lzio.h lmem.h lundump.h)
add_library(lfunc OBJECT lfunc.c lprefix.h lua.h luaconf.h lfunc.h lobject.h llimits.h lgc.h lstate.h ltm.h lzio.h lmem.h)
add_library(lgc OBJECT lgc.c lprefix.h lua.h luaconf.h ldebug.h lstate.h lobject.h llimits.h ltm.h lzio.h lmem.h ldo.h lfunc.h lgc.h lstring.h ltable.h)
add_library(linit OBJECT linit.c lprefix.h lua.h luaconf.h lualib.h lauxlib.h)
add_library(liolib OBJECT liolib.c lprefix.h lua.h luaconf.h lauxlib.h lualib.h)
add_library(llex OBJECT llex.c lprefix.h lua.h luaconf.h lctype.h llimits.h ldebug.h lstate.h lobject.h ltm.h lzio.h lmem.h ldo.h lgc.h llex.h lparser.h lstring.h ltable.h)
add_library(lmathlib OBJECT lmathlib.c lprefix.h lua.h luaconf.h lauxlib.h lualib.h)
add_library(lmem OBJECT lmem.c lprefix.h lua.h luaconf.h ldebug.h lstate.h lobject.h llimits.h ltm.h lzio.h lmem.h ldo.h lgc.h)
add_library(loadlib OBJECT loadlib.c lprefix.h lua.h luaconf.h lauxlib.h lualib.h)
add_library(lobject OBJECT lobject.c lprefix.h lua.h luaconf.h lctype.h llimits.h ldebug.h lstate.h lobject.h ltm.h lzio.h lmem.h ldo.h lstring.h lgc.h lvm.h)
add_library(lopcodes OBJECT lopcodes.c lprefix.h lopcodes.h llimits.h lua.h luaconf.h)
add_library(loslib OBJECT loslib.c lprefix.h lua.h luaconf.h lauxlib.h lualib.h)
add_library(lparser OBJECT lparser.c lprefix.h lua.h luaconf.h lcode.h llex.h lobject.h llimits.h lzio.h lmem.h lopcodes.h lparser.h ldebug.h lstate.h ltm.h ldo.h lfunc.h lstring.h lgc.h ltable.h)
add_library(lstate OBJECT lstate.c lprefix.h lua.h luaconf.h lapi.h llimits.h lstate.h lobject.h ltm.h lzio.h lmem.h ldebug.h ldo.h lfunc.h lgc.h llex.h lstring.h ltable.h)
add_library(lstring OBJECT lstring.c lprefix.h lua.h luaconf.h ldebug.h lstate.h lobject.h llimits.h ltm.h lzio.h lmem.h ldo.h lstring.h lgc.h)
add_library(lstrlib OBJECT lstrlib.c lprefix.h lua.h luaconf.h lauxlib.h lualib.h)
add_library(ltable OBJECT ltable.c lprefix.h lua.h luaconf.h ldebug.h lstate.h lobject.h llimits.h ltm.h lzio.h lmem.h ldo.h lgc.h lstring.h ltable.h lvm.h)
add_library(ltablib OBJECT ltablib.c lprefix.h lua.h luaconf.h lauxlib.h lualib.h)
add_library(ltm OBJECT ltm.c lprefix.h lua.h luaconf.h ldebug.h lstate.h lobject.h llimits.h ltm.h lzio.h lmem.h ldo.h lstring.h lgc.h ltable.h lvm.h)
add_library(lua OBJECT lua.c lprefix.h lua.h luaconf.h lauxlib.h lualib.h)
add_library(luac OBJECT luac.c lprefix.h lua.h luaconf.h lauxlib.h lobject.h llimits.h lstate.h ltm.h lzio.h lmem.h lundump.h ldebug.h lopcodes.h)
add_library(lundump OBJECT lundump.c lprefix.h lua.h luaconf.h ldebug.h lstate.h lobject.h llimits.h ltm.h lzio.h lmem.h ldo.h lfunc.h lstring.h lgc.h lundump.h)
add_library(lutf8lib OBJECT lutf8lib.c lprefix.h lua.h luaconf.h lauxlib.h lualib.h)
add_library(lvm OBJECT lvm.c lprefix.h lua.h luaconf.h ldebug.h lstate.h lobject.h llimits.h ltm.h lzio.h lmem.h ldo.h lfunc.h lgc.h lopcodes.h lstring.h ltable.h lvm.h)
add_library(lzio OBJECT lzio.c lprefix.h lua.h luaconf.h llimits.h lmem.h lstate.h lobject.h ltm.h lzio.h)

add_library(lua53 STATIC)
target_link_libraries(lua53 lapi lcode lctype ldebug ldo ldump lfunc lgc llex lmem lobject lopcodes lparser lstate lstring ltable ltm lundump lvm lzio lauxlib lbaselib lbitlib lcorolib ldblib liolib lmathlib loslib lstrlib ltablib lutf8lib loadlib linit)

